@@ -31,12 +31,12 @@ let stripdebug infile outfile =
                  outfile in
   (* Skip the #! header, going straight to the first section. *)
   seek_in ic pos_first_section;
-  (* Copy each section except DBUG and CRCS *)
+  (* Copy each section except DBUG, CRCS and RNTM *)
   Bytesections.init_record oc;
   List.iter
     (fun (name, len) ->
-      if name = "DBUG" || name = "CRCS" then begin
-        seek_in ic (in_channel_length ic + len)
+      if name = "DBUG" || name = "CRCS" || name = "RNTM" then begin
+        seek_in ic (pos_in ic + len)
       end else begin
         copy_file_chunk ic oc len;
         Bytesections.record oc name
